# cryptkeeper

./: .clang-tidy  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  justfile
cmake/: CompilerOptions.cmake
docs/: releases.md
include/: global.hpp
include/cli/: build_cli.hpp  cli.hpp  types.hpp
include/cmd/: config.hpp  init.hpp  insert.hpp  show.hpp
include/lib/: config.hpp  index.hpp  types.hpp
include/lib/config/: active.hpp  deserialize.hpp  insert_vault.hpp  key_parse.hpp  print.hpp  pwgen.hpp  save.hpp  set.hpp  types.hpp
include/lib/crypto/: crypto.hpp  random.hpp  secure_bytes.hpp  secure_wipe.hpp  types.hpp
include/lib/index/: deserialize.hpp  find.hpp  get_idx_file.hpp  index.hpp  insert_entry.hpp  parse_path.hpp  print_tree.hpp  serialize.hpp  types.hpp  walk_path.hpp  write_index.hpp
include/lib/input/: wisper.hpp
include/lib/mount/: mount.hpp  types.hpp
include/lib/secret/: secret.hpp
include/util/: error.hpp  logger.hpp  term.hpp
include/util/logger/: logger.hpp  theme.hpp
include/utils/: logger.hpp
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  build_cli.cpp  cli.cpp
src/cmd/: CMakeLists.txt  _internal.hpp  config.cpp  init.cpp  insert.cpp  mount.cpp  run_command.cpp  show.cpp  umount.cpp
src/commands/: config.cpp  get.cpp  init.cpp
src/lib/: CMakeLists.txt  config.cpp  index.cpp
src/lib/config/: active.cpp  config.cpp  default.cpp  default.hpp  deserialize.cpp  fio.cpp  init.cpp  insert_vault.cpp  key_parse.cpp  parse_key.cpp  parse_key.hpp  path.cpp  path.hpp  print.cpp  pwgen.cpp  save.cpp  serialize.cpp  serialize.hpp  set.cpp  validate.cpp  write.cpp
src/lib/config/_internal/: codec.hpp  default.hpp  parse_key.hpp  serialize.hpp
src/lib/crypto/: crypto.cpp  fingerprint.cpp  fingerprint.hpp  random.cpp  secure_wipe.cpp
src/lib/fio/: atomic_write.cpp  atomic_write.hpp  msg.cpp  msg.hpp  sync_dir.cpp  sync_dir.hpp  tempfile.hpp  tempfile_posix.cpp  tempfile_win32.cpp  write_all.cpp  write_all.hpp
src/lib/fs/: msg.cpp  msg.hpp  tempfile.hpp  tempfile_posix.cpp  tempfile_win32.cpp  write_all.cpp  write_all.hpp  write_atomic.cpp  write_atomic.hpp
src/lib/index/: deserialize.cpp  find.cpp  fingerprints.cpp  fio.cpp  get_idx_file.cpp  index.cpp  insert.cpp  insert_entry.cpp  parse_path.cpp  print.cpp  print_tree.cpp  serde.cpp  serialize.cpp  theme.cpp  walk_path.cpp  write.cpp  write_index.cpp
src/lib/index/_internal/: codec.hpp  deserialize.hpp  fingerprints.hpp  get_idx_file.hpp  theme.hpp  types.hpp  walk_path.hpp  write_index.hpp
src/lib/input/: wisper.cpp
src/lib/mount/: chroot.cpp  deserialize.cpp  initialized.cpp  mount.cpp  mounts.cpp  print.cpp  resolve.cpp  umount.cpp  write.cpp
src/lib/mount/_internal/: mount.hpp
src/lib/path/: existence.cpp  get_gpg_id_file.cpp  get_gpg_id_file.hpp  get_idx_file.cpp  get_secret_file.cpp  get_secret_file.hpp  join.cpp  path.cpp
src/lib/secret/: secret.cpp
src/util/: CMakeLists.txt  logger.cpp
src/util/logger/: logger.cpp  theme.cpp
src/utils/: logger.cpp
tests/cmd/: CMakeLists.txt  init_test.cpp
tests/lib/: CMakeLists.txt  config_test.cpp  crypto_test.cpp
tests/util/: gen_key.cpp  scoped_config_dir.cpp  scoped_config_dir.hpp  scoped_vault_root.cpp
